--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js" type="module" defer></script>
 </head>
 <body>
     <aside>
@@ -24,126 +25,9 @@
     <main>
         <h2>Todos los productos</h2>
         <section>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
-            <div>
-              <h3>Abrigo 01</h3>
-              <p>$ 1.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
-            <div>
-              <h3>Abrigo 02</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
-            <div>
-              <h3>Abrigo 03</h3>
-              <p>$ 2.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
-            <div>
-              <h3>Abrigo 04</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_829630-MCO31080337339_062019-F.webp" alt="">
-            <div>
-              <h3>Abrigo 05</h3>
-              <p>$ 1.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
-            <div>
-              <h3>Camiseta 01</h3>
-              <p>$ 1.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
-            <div>
-              <h3>Camiseta 02</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
-            <div>
-              <h3>Camiseta 03</h3>
-              <p>$ 1.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_776916-MCO72088562654_102023-F.webp" alt="">
-            <div>
-              <h3>Camiseta 04</h3>
-              <p>$ 1.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_968038-MCO53410409233_012023-F.webp" alt="">
-            <div>
-              <h3>Camiseta 05</h3>
-              <p>$ 2.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
-            <div>
-              <h3>Pantalon 01</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_795748-MCO70527773883_072023-F.webp" alt="">
-            <div>
-              <h3>Pantalon 02</h3>
-              <p>$ 2.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_758206-MCO70501309390_072023-F.webp" alt="">
-            <div>
-              <h3>Pantalon 03</h3>
-              <p>$ 1.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_947436-MCO69626235546_052023-F.webp"" alt="">
-            <div>
-              <h3>Pantalon 04</h3>
-              <p>$ 2.000</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
-          <article>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_618657-MCO69523195685_052023-F.webp" alt="">
-            <div>
-              <h3>Pantalon 05</h3>
-              <p>$ 2.500</p>
-              <a href="">Agregar</a>
-            </div>
-          </article>
+          <get-product class="items" prodctype="abrigo"></get-product>
+          <get-product class="items" prodctype="camiseta"></get-product>
+          <get-product class="items" prodctype="pantalon"></get-product>
         </section>
       </main>
 </body>
